  variable
- Modify Locke's test to use Kendall's tau
- Add ginv() (Moore-Penrose inverse) matrix function
- Add multivariate Portmanteau test for autocorrelation in
  VARs (Ljung-Box)
- Allow concatenation of multiple short-form options, as
  in "-rdq"
- Modify retrieval of info from VARs: $coeff gets the matrix
  of coefficients, $compan gets the companion matrix
- gretlcli: Ctrl-X exits without prompting for save
- Databases: allow selection of more than one series for
  display, graphing, importing
- Databases: allowing deletion of series from native gretl
  databases (if the user has write access)
- New command, "dataset": subsumes the old "addobs" and
  "transpos", while adding new options
- fftw DLL for Windows: fix a problem experienced on some 
  Windows systems 
- Generation of random variables in GUI: use an interface
  consistent with that for p-values, critical values, etc.

5/17/2007 version 1.6.5
- Fix new breakage in configuration of user directory
- Updates to manual
- Mark some more strings for translation
- Add new menu set /Tools/Nonparametric tests, with GUI
  access to the "difftest" and "runs" commands
- Add --difference option for runs command
- Various small bug-fixes

5/13/2007 version 1.6.4
- Fix breakage in relation to the Windows registry
- Fixes for accented characters in graphs, on systems with
  UTF-8 as the standard character encoding
- Additional fixes for Polish text in graphs

5/10/2007 version 1.6.3
- Add facility for bootstrap analysis in GUI, for OLS
- Model table: fixes for including panel models; allow up to
  12 models; formatting enhancements
- Fix bug in panel autocorrelation test (lmtest command)
- Add fft() matrix function (Fast Fourier Transform)
- Add cmult() matrix function (complex multiplication)
- Add quantile() function in genr
- Add production of restricted estimates to the "restrict"
  command as applied to VECMs
- Multiple fixes for session icon handling
- LAD models: print the median of the dependent variable